# GB-Emu-CD

./: README.md  game_rom.uf2  make_rom.py
SRC/Pico-GB-20250207/inc/: mk_ili9225.h  sdcard.h
SRC/Pico-GB-20250207/src/: main.c  mk_ili9225.c  rom.c
SRC/diagnostic/: CMakeLists.txt  main.c
